<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/update_button"
        app:layout_constraintStart_toEndOf="@+id/selectButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableCurrentParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/selectButton">
    </TableLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tableCurrentParam">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tableCurrentParam">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/phLo_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/phLoLabel"
                        android:layout_column="1"/>

                    <TextView
                        android:id="@+id/phLo_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/threshValueInit"
                        android:layout_column="2"/>

                    <Button
                        android:id="@+id/phLo_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/down_button"
                        android:layout_column="3"/>

                    <Button
                        android:id="@+id/phLo_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_button"
                        android:layout_column="4"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/phHi_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/phHiLabel"
                        android:layout_column="1"/>

                    <TextView
                        android:id="@+id/phHi_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/threshValueInit"
                        android:layout_column="2"/>

                    <Button
                        android:id="@+id/phHi_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/down_button"
                        android:layout_column="3"/>

                    <Button
                        android:id="@+id/phHi_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_button"
                        android:layout_column="4"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ecLo_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/ecLoLabel"
                        android:layout_column="1"/>

                    <TextView
                        android:id="@+id/ecLo_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/threshValueInit"
                        android:layout_column="2"/>

                    <Button
                        android:id="@+id/ecLo_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/down_button"
                        android:layout_column="3"/>

                    <Button
                        android:id="@+id/ecLo_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_button"
                        android:layout_column="4"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/send_button"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>